use ImmutableSet.of everywhere